align horizontal lines if possible. Fixes #943

--- a/AzureFunctions.AngularClient/src/app/function-dev/function-dev.component.scss
+++ b/AzureFunctions.AngularClient/src/app/function-dev/function-dev.component.scss
@@ -190,7 +190,7 @@
     border-top: 1px solid #ccc;
     display: flex;
     flex-direction: row-reverse; 
-    padding: 10px 10px 10px 0px;
+    padding: 9px 10px 9px 0px;
 }
 
 .hidden {
